--- a/Medibook.Data.Test/Medibook.Data.Test.csproj
+++ b/Medibook.Data.Test/Medibook.Data.Test.csproj
@@ -18,4 +18,9 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Medibook.Data\Medibook.Data.csproj" />
+    <ProjectReference Include="..\MediBook\MediBook.Core.csproj" />
+  </ItemGroup>
+
 </Project>
