--- a/MediBook.Web/MediBook.Web.csproj
+++ b/MediBook.Web/MediBook.Web.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Medibook.Data\Medibook.Data.csproj" />
+    <ProjectReference Include="..\MediBook.Services\MediBook.Services.csproj" />
+    <ProjectReference Include="..\MediBook\MediBook.Core.csproj" />
+  </ItemGroup>
+
 </Project>
