--- a/Medibook.Services.Test/Medibook.Services.Test.csproj
+++ b/Medibook.Services.Test/Medibook.Services.Test.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Medibook.Data\Medibook.Data.csproj" />
+    <ProjectReference Include="..\MediBook.Services\MediBook.Services.csproj" />
+    <ProjectReference Include="..\MediBook\MediBook.Core.csproj" />
+  </ItemGroup>
+
 </Project>
