Data annotations on core models

--- a/MediBook.Web/appsettings.json
+++ b/MediBook.Web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=medibookdb;User Id=medibookdbuser;Password=M3d18o0k_D8_u53R;"
+  }, 
   "AllowedHosts": "*"
 }
