Minor changes and initial migration created

--- a/MediBook.Services/MediBook.Services.csproj
+++ b/MediBook.Services/MediBook.Services.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Medibook.Data\Medibook.Data.csproj" />
+    <ProjectReference Include="..\Medibook.Data\MediBook.Data.csproj" />
     <ProjectReference Include="..\MediBook\MediBook.Core.csproj" />
   </ItemGroup>
 
