--- a/Medibook.Data.Test/Medibook.Data.Test.csproj
+++ b/Medibook.Data.Test/Medibook.Data.Test.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Medibook.Data\Medibook.Data.csproj" />
+    <ProjectReference Include="..\Medibook.Data\MediBook.Data.csproj" />
     <ProjectReference Include="..\MediBook\MediBook.Core.csproj" />
   </ItemGroup>
 
