--- a/Medibook.Services.Test/Medibook.Services.Test.csproj
+++ b/Medibook.Services.Test/Medibook.Services.Test.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Medibook.Data\Medibook.Data.csproj" />
+    <ProjectReference Include="..\Medibook.Data\MediBook.Data.csproj" />
     <ProjectReference Include="..\MediBook.Services\MediBook.Services.csproj" />
     <ProjectReference Include="..\MediBook\MediBook.Core.csproj" />
   </ItemGroup>
