--- a/MediBook.Web/appsettings.json
+++ b/MediBook.Web/appsettings.json
@@ -6,8 +6,32 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Log4NetCore": {
+    "Name": "Test",
+    "LoggerRepository": "Fantastic",
+    "OverrideCriticalLevelWith": "Fatal",
+    "Watch": false,
+    "UseWebOrAppConfig": false,
+    "PropertyOverrides": [
+      {
+        "XPath": "/log4net/appender[@name='RollingFile']/file",
+        "Attributes": {
+          "Value": "overridedFileName.log"
+        }
+      },
+      {
+        "XPath": "/log4net/appender[@name='RollingFile']/maximumFileSize",
+        "Attributes": {
+          "Value": "200KB"
+        }
+      },
+      {
+        "XPath": "/log4net/appender[@name='RollingFile']/file"
+      }
+    ]
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=medibookdb;User Id=medibookdbuser;Password=M3d18o0k_D8_u53R;"
-  }, 
+  },
   "AllowedHosts": "*"
 }
