Fixed Logging implementation and relevant unit tests

--- a/MediBook.Services/MediBook.Services.csproj
+++ b/MediBook.Services/MediBook.Services.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\MediBook\MediBook.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Cryptography\" />
+  </ItemGroup>
+
 </Project>
