--- a/Medibook.Services.Test/Medibook.Services.Test.csproj
+++ b/Medibook.Services.Test/Medibook.Services.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="MockQueryable.Core" Version="5.0.0" />
     <PackageReference Include="MockQueryable.NSubstitute" Version="5.0.0" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
