--- a/MediBook.Services/MediBook.Services.csproj
+++ b/MediBook.Services/MediBook.Services.csproj
@@ -5,12 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
+    <ProjectReference Include="..\Medibook.Data\MediBook.Data.csproj" />
+    <ProjectReference Include="..\MediBook\MediBook.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Medibook.Data\MediBook.Data.csproj" />
-    <ProjectReference Include="..\MediBook\MediBook.Core.csproj" />
+    <Reference Include="Microsoft.AspNetCore.Mvc.ViewFeatures">
+      <HintPath>C:\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\5.0.0\ref\net5.0\Microsoft.AspNetCore.Mvc.ViewFeatures.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
