--- a/Medibook.Services.Test/MediBook.Services.Test.csproj
+++ b/Medibook.Services.Test/MediBook.Services.Test.csproj
@@ -16,9 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Medibook.Data\MediBook.Data.csproj" />
+    <ProjectReference Include="..\MediBook.Data\MediBook.Data.csproj" />
     <ProjectReference Include="..\MediBook.Services\MediBook.Services.csproj" />
-    <ProjectReference Include="..\MediBook\MediBook.Core.csproj" />
+    <ProjectReference Include="..\MediBook.Core\MediBook.Core.csproj" />
   </ItemGroup>
 
 </Project>
