--- a/MediBook.Web/appsettings.json
+++ b/MediBook.Web/appsettings.json
@@ -37,7 +37,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=medibookdb;User Id=medibookdbuser;Password=M3d18o0k_D8_u53R;",
-    "SQLiteConnection": "Data Source=Medibook.db",
+    "SQLiteConnection": "Data Source=MediBook.db",
     "PostgreSQLConnection": "Host=192.168.86.23;Port=5432;Database=MediBookDb;Username=devdbuser;Password=resUbDveD!"
   },
   "AllowedHosts": "*"
