--- a/UnitTests/MediBook.Services.Test/MediBook.Services.Test.csproj
+++ b/UnitTests/MediBook.Services.Test/MediBook.Services.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.13.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageReference Include="MockQueryable.Core" Version="7.0.3" />
     <PackageReference Include="MockQueryable.NSubstitute" Version="7.0.3" />
