--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+[Bb]uild[Oo]utput/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -341,3 +342,5 @@ healthchecksdb
 *.db
 *.db-shm
 *.db-wal
+
+*.bak
