--- a/UnitTests/MediBook.Data.Test/MediBook.Data.Test.csproj
+++ b/UnitTests/MediBook.Data.Test/MediBook.Data.Test.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -16,9 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Medibook.Data\MediBook.Data.csproj" />
-    <ProjectReference Include="..\MediBook.Services\MediBook.Services.csproj" />
-    <ProjectReference Include="..\MediBook\MediBook.Core.csproj" />
+    <ProjectReference Include="..\..\MediBook.Core\MediBook.Core.csproj" />
+    <ProjectReference Include="..\..\MediBook.Data\MediBook.Data.csproj" />
   </ItemGroup>
 
 </Project>
