setting the appuser in the Dockerfile

--- a/MediBook.Web/Dockerfile
+++ b/MediBook.Web/Dockerfile
@@ -1,12 +1,12 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+ARG APP_UID=1000
 
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
+ARG APP_UID
+RUN adduser --uid $APP_UID --disabled-password --gecos "" appuser
+USER appuser
 WORKDIR /app
 EXPOSE 8100
 EXPOSE 8101
-
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
@@ -26,10 +26,10 @@ FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./MediBook.Web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
+ARG APP_UID
 WORKDIR /app
 COPY --from=publish /app/publish .
 RUN chown -R $APP_UID:$APP_UID /app
-USER $APP_UID
+USER appuser
 ENTRYPOINT ["dotnet", "MediBook.Web.dll"]
