--- a/MediBook.Web/Dockerfile
+++ b/MediBook.Web/Dockerfile
@@ -28,5 +28,5 @@ COPY --from=publish /app/publish .
 USER root
 RUN chown -R app:app /app
 USER app
-ENV ASPNETCORE_URLS="http://+:8100;https://+:8101"
+ENV ASPNETCORE_URLS="http://+:8100"
 ENTRYPOINT ["dotnet", "MediBook.Web.dll"]
