Removed config values from repo

--- a/MediBook.Web/appsettings.json
+++ b/MediBook.Web/appsettings.json
@@ -31,14 +31,14 @@
     ]
   },
   "DefaultCryptographyOptions": {
-    "CryptographyKey": "b14ca5898a4e4133bbce2ea2315a1916",
+    "CryptographyKey": "",
     "EncryptionAlgorithm": "AES",
     "HashingAlgorithm": "SHA512"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=medibookdb;User Id=medibookdbuser;Password=M3d18o0k_D8_u53R;",
-    "SQLiteConnection": "Data Source=MediBook.db",
-    "PostgreSQLConnection": "Host=192.168.86.23;Port=5432;Database=MediBookDb;Username=devdbuser;Password=resUbDveD!"
+    "DefaultConnection": "",
+    "SQLiteConnection": "",
+    "PostgreSQLConnection": ""
   },
   "AllowedHosts": "*"
 }
