--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
       - ./appsettings.json:/app/appsettings.json:ro
     # Add any other required volumes, e.g., for logs or persistent data
     # - ./data:/app/data
-
+    networks:
+    - proxy-tier
     # Add environment variables if your app needs them
     # environment:
     #   - ASPNETCORE_ENVIRONMENT=Production
@@ -17,3 +18,8 @@ services:
 
     restart: unless-stopped # Good default restart policy
     # Add other configurations like depends_on, networks if you have more services
+
+networks:
+    proxy-tier:
+        external: true
+        name: ${APP_NETWORK_NAME}
