--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,11 @@ services:
     networks:
     - proxy-tier
     # Add environment variables if your app needs them
-    # environment:
-    #   - ASPNETCORE_ENVIRONMENT=Production
-    #   - MY_CUSTOM_SETTING=SomeValue
+    environment:
+        - ASPNETCORE_ENVIRONMENT="${ASP_NETCORE_ENVIRONMENT}"
+        - VIRTUAL_HOST="${VIRTUAL_HOSTS}"
+        - LETSENCRYPT_HOST="${SSLCERT_HOSTS}"
+        - LETSENCRYPT_EMAIL="${SSLCERT_EMAIL}"
 
     restart: unless-stopped # Good default restart policy
     # Add other configurations like depends_on, networks if you have more services
