Added virtual port to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     environment:
         - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
         - VIRTUAL_HOST=${VIRTUAL_HOST}
+        - VIRTUAL_PORT=8100
         - LETSENCRYPT_HOST=${LETSENCRYPT_HOST}
         - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
 
